package agent;

/**
 * IntentTypeEnum.java
 * Enumeration of possible intent types for user input analysis.
 * author: Florian Mordohai with LLM assistance
 */
public enum IntentTypeEnum {
    CONTINUE_STORY, CREATE_ENTITY, UNKNOWN
}
